--- a/mainPage.html
+++ b/mainPage.html
@@ -56,11 +56,11 @@
         </nav>
         <!--Spaces
 ========================================-->    
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
                   
                             <!--My title
 ========================================-->
@@ -77,9 +77,9 @@
           </div>
                  <!--Spaces
 =========================================-->
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
-                  <p>&bndsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
                           <!--My projects
 =========================================-->
 
