--- a/mainPage.html
+++ b/mainPage.html
@@ -49,7 +49,7 @@
           <div>
               
               <center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>
-              <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
+              <center><em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.</h3></em></center>
               <em><h3>Starting from May 11, I will begin my project and make a website every day for 200 days</h3></em>
               <!--Blog link-->
               <em><h3>If you want to know more about my websites, you can go to my</h3></em>
