--- a/mainPage.html
+++ b/mainPage.html
@@ -78,6 +78,9 @@
           </div>
       </content>
       <script src="main.js"></script>
+      <script>
+      var wow = new WOW().init();
+      </script>
       </body>
    </div>
 
