--- a/mainPage.html
+++ b/mainPage.html
@@ -69,18 +69,14 @@
       <content>
           <div class="projList">
                   
-                  <a class="wow animate fadeIn" href="http://ak-basketball.github.io/projects/day1.html">Day 1: About</a>
+                  <a class="coBlack" href="http://ak-basketball.github.io/projects/day1.html">Day 1: About</a>
                   <br>
-                  <a class="wow animate fadeIn" href="http://ak-basketball.github.io/projects/day2.html">Day 2: Control</a>
+                  <a class="coBlack" href="http://ak-basketball.github.io/projects/day2.html">Day 2: Control</a>
                   <br>
-                  <a class="wow animate fadeIn" href="http://ak-basketball.github.io/projects/day3.html">Day 3: Animation</a>
+                  <a class="coBlack" href="http://ak-basketball.github.io/projects/day3.html">Day 3: Animation</a>
              
           </div>
       </content>
-      <script src="main.js"></script>
-      <script>
-      var wow = new WOW().init();
-      </script>
       </body>
    </div>
 
