--- a/aboutPage.html
+++ b/aboutPage.html
@@ -18,7 +18,7 @@
             </script>
 <!--My menu bar
 ==========================-->
-            <div>
+            <div class="menu">
                 
             </div>
 <!--Spaces
