--- a/blogPage.html
+++ b/blogPage.html
@@ -19,7 +19,7 @@
         </script>
         <!--My menu bar
 =================================-->
-        <div>
+        <div class="menu>
             
         </div>
 ==================================-->
