--- a/mainPage.html
+++ b/mainPage.html
@@ -22,7 +22,7 @@
              <!--The code to my menu bar
 ========================================-->
         <nav> 
-            <div class="menu-bar">
+            <div class="menu">
                 
                 
             </div>
