--- a/blogPage.html
+++ b/blogPage.html
@@ -27,13 +27,14 @@
      <p>&nbsp;</p>
      <!--Title and description
 ==================================-->
-        <div>
+        <div class="intro">
             <em><h1 style="font-family: Comic Sans MS">Blog</h1></em>
             <em><p style="font-family: Comic Sans MS; font-size: 20px">where I'll tell you about my websites and projects</p></em>
         <!--Spacers
 ==================================-->
      <p>&nbsp;</p>
      <p>&nbsp;</p>
+        </div>
          <!--My projects
 ==================================-->
         <div class="sect1">
