--- a/mainPage.html
+++ b/mainPage.html
@@ -54,9 +54,9 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+         </div>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-          </div>      <!--My projects
+<p>&nbsp;</p>     <!--My projects
 =========================================-->
       <content>
           <div class="projList">
