--- a/mainPage.html
+++ b/mainPage.html
@@ -56,6 +56,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
          </div>
+         <div class="projects">
 <p>&nbsp;</p>
 <p>&nbsp;</p>     <!--My projects
 =========================================-->
@@ -70,6 +71,8 @@
              
           </div>
       </content>
+      <div class="intro">
+            
       </body>
    </div>
 
