--- a/mainPage.html
+++ b/mainPage.html
@@ -83,6 +83,7 @@
       <div class="intro">
             
       </body>
+     <script type="text/javascript" src="mainPage.js"></script>
    </div>
 
 </html>
