--- a/mainPage.html
+++ b/mainPage.html
@@ -91,7 +91,7 @@
       </content>
             
       </body>
+    <script type="text/javascript" src="mainPage.js"></script>
     </div>
-  
-
-</html>
+    
+  </html>
