--- a/blogPage.html
+++ b/blogPage.html
@@ -12,16 +12,33 @@
         <title>Blog</title>
     </head>
     <body class="content">
-        <!--My jQuery code
-=================================-->
-        <script>
-           
-        </script>
-        <!--My menu bar
-=================================-->
-        <div class="menu>
+         <div class="menu">
+                 <div class="menu-bar">
+	        <nav>
+	            <ul>
+	                <!--Home
+============================-->
+                <li class="home"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">HOME</a></li>
+	                <!--Blog
+============================-->
+                <li class="blog"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">BLOG</a></li>
+                 <!--About
+============================-->
+                <li class="about"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">ABOUT</a></li>
+                 <!--Resources
+============================-->
+                <li class="resources"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">RESOURCES</a></li>
+	            </ul>
+	        </nav>
+	    </div>
             
-        </div>
+	    <!-- The Menu Icon for my website -->
+	    <div class="nav-icon">
+	        <span class="top"></span>
+	        <span class="middle"></span>
+	        <span class="bottom"></span>
+	    </div>
+            </div>
 ==================================-->
      <p>&nbsp;</p>
      <p>&nbsp;</p>
@@ -44,4 +61,5 @@
         </div>
 <!--==============================--> 
    </body>
+   <script type="text/javascript" src="mainPage.js"></script>
 </html>
