--- a/aboutPage.html
+++ b/aboutPage.html
@@ -49,5 +49,5 @@
             <h1 style="font-family: Comic Sans MS">About</h1>
             <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from May 11, I will make a project, every day, for 200 days.</h3></center>
         </body>
-        <script>
+        <script type="text/javascript" src="mainPage.js"></script>
     </html>
