--- a/mainPage.html
+++ b/mainPage.html
@@ -22,7 +22,7 @@
              <!--The code to my menu bar
 ========================================-->
        
-       <div class="menu-bar">
+       <div class="menuPage">
 	        <nav>
 	            <ul>
 	                <!--Home
@@ -42,7 +42,7 @@
 	    </div>
             
 	    <!-- The Menu Icon for my website -->
-	    <div class="nav-icon">
+	    <div class="menu-icon">
 	        <span class="top"></span>
 	        <span class="middle"></span>
 	        <span class="bottom"></span>
