--- a/aboutPage.html
+++ b/aboutPage.html
@@ -14,7 +14,7 @@
 <!--My menu bar
 ==========================-->
             <div class="menu">
-                 <div class="menu-bar">
+                 <div class="menuPage">
 	        <nav>
 	            <ul>
 	                <!--Home
@@ -34,7 +34,7 @@
 	    </div>
             
 	    <!-- The Menu Icon for my website -->
-	    <div class="nav-icon">
+	    <div class="menu-icon">
 	        <span class="top"></span>
 	        <span class="middle"></span>
 	        <span class="bottom"></span>
