--- a/blogPage.html
+++ b/blogPage.html
@@ -13,7 +13,7 @@
     </head>
     <body class="content">
          <div class="menu">
-                 <div class="menu-bar">
+                 <div class="menuPage">
 	        <nav>
 	            <ul>
 	                <!--Home
@@ -33,7 +33,7 @@
 	    </div>
             
 	    <!-- The Menu Icon for my website -->
-	    <div class="nav-icon">
+	    <div class="menu-icon">
 	        <span class="top"></span>
 	        <span class="middle"></span>
 	        <span class="bottom"></span>
