--- a/mainPage.html
+++ b/mainPage.html
@@ -43,7 +43,7 @@
             
 	    <!-- The Menu Icon for my website -->
 	    <div class="menu-icon">
-	        <span class="top"></span>
+	        <span class="upper"></span>
 	        <span class="middle"></span>
 	        <span class="bottom"></span>
 	    </div>
