--- a/mainPage.html
+++ b/mainPage.html
@@ -68,16 +68,9 @@
             </div>
             </div>
           
-          <!--Spacers
-=========================================-->
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<!--=========================================-->
          </div>
          <div class="projects">
-<p>&nbsp;</p>
-<p>&nbsp;</p>     <!--My projects
+         	    <!--My projects
 =========================================-->
       <content>
           <div class="projList">
