--- a/mainPage.html
+++ b/mainPage.html
@@ -27,13 +27,13 @@
 	            <ul>
 	                <!--Home
 ============================-->
-                <li class="home"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">HOME</a></li>
+                <li class="home1"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">HOME</a></li>
 	                <!--Blog
 ============================-->
-                <li class="blog"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">BLOG</a></li>
+                <li class="blog1"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">BLOG</a></li>
                  <!--About
 ============================-->
-                <li class="about"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">ABOUT</a></li>
+                <li class="about1"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">ABOUT</a></li>
 	            </ul>
 	        </nav>
 	    </div>
