--- a/blogPage.html
+++ b/blogPage.html
@@ -18,35 +18,34 @@
 	            <ul>
 	                <!--Home
 ============================-->
-                <li class="home"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">HOME</a></li>
+                <li class="home1"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">HOME</a></li>
 	                <!--Blog
 ============================-->
-                <li class="blog"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">BLOG</a></li>
+                <li class="blog1"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">BLOG</a></li>
                  <!--About
 ============================-->
-                <li class="about"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">ABOUT</a></li>
-                 <!--Resources
-============================-->
-                <li class="resources"><a href="http://ak-basketball.github.io/MainPage/blogPage.html">RESOURCES</a></li>
+                <li class="about1"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">ABOUT</a></li>
 	            </ul>
 	        </nav>
 	    </div>
             
 	    <!-- The Menu Icon for my website -->
 	    <div class="menu-icon">
-	        <span class="top"></span>
+	        <span class="upper"></span>
 	        <span class="middle"></span>
 	        <span class="bottom"></span>
 	    </div>
             </div>
-==================================-->
-     <p>&nbsp;</p>
+<!--==================================-->
+    <div class="background">
+      <p>&nbsp;</p>
      <p>&nbsp;</p>
      <!--Title and description
 ==================================-->
         <div class="intro">
-            <em><h1 style="font-family: Comic Sans MS">Blog</h1></em>
-            <em><p style="font-family: Comic Sans MS; font-size: 20px">where I'll tell you about my websites and projects</p></em>
+            <em><h1 class="title-blog">Blog</h1></em>
+            <em><h3 class="p-blog">Where I'll tell you about my websites and projects</h3></em>
+          </div>
         <!--Spacers
 ==================================-->
      <p>&nbsp;</p>
@@ -55,8 +54,10 @@
          <!--My projects
 ==================================-->
         <div class="sect1">
-            <ul class="blogli">
-                <li><a href="">Day 1:</a></li>
+            <ul class="projList">
+                <li><a href="">Day 1: About</a></li>
+              <li><a href="">Day 2: Control</a></li>
+              <li><a href="">Day 3: Animation</a></li>
             </ul>
         </div>
 <!--==============================--> 
