--- a/aboutPage.html
+++ b/aboutPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+     <html>
         <head>
 <!--My css code
 =========================-->
@@ -11,6 +11,7 @@
             <title>aboutPage</title>
         </head>
         <body class="content">
+          <div class="background">
 <!--My menu bar
 ==========================-->
             <div class="menu">
@@ -46,8 +47,9 @@
             <p>&nbsp;</p>
 <!--My main paragraph
 ==========================-->
-            <h1 style="font-family: Comic Sans MS">About</h1>
-            <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from May 11, I will make a project, every day, for 200 days.</h3></center>
+            <h1 class="title-about">About</h1>
+            <center><h3 class="h3-about">Hi, my name is Anshul Kashyap and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from May 11, I will make a project, every day, for 200 days.</h3></center>
+          </div>
         </body>
         <script type="text/javascript" src="mainPage.js"></script>
     </html>
