--- a/blogPage.html
+++ b/blogPage.html
@@ -56,7 +56,7 @@
         <div class="sect1">
             <ul class="projList">
                 <li><a href="http://ak-basketball.github.io/blog/day1.html">Day 1: About</a></li>
-              <li><a href="">Day 2: Control</a></li>
+              <li><a href="http://ak-basketball.github.io/blog/day2.html">Day 2: Control</a></li>
               <li><a href="">Day 3: Animation</a></li>
             </ul>
         </div>
