--- a/mainPage.html
+++ b/mainPage.html
@@ -81,6 +81,8 @@
                   <a href="http://ak-basketball.github.io/projects/day2.html">Day 2: Control</a>
                   <br>
                   <a href="http://ak-basketball.github.io/projects/day3.html">Day 3: Animation</a>
+                  <br>
+                  <a href="http://ak-basketball.github.io/projects/day4.html">Day 4: Solar-System</a>
             
           </div>
       
