--- a/blogPage.html
+++ b/blogPage.html
@@ -58,6 +58,7 @@
                 <li><a href="http://ak-basketball.github.io/blog/day1.html">Day 1: About</a></li>
               <li><a href="http://ak-basketball.github.io/blog/day2.html">Day 2: Control</a></li>
               <li><a href="http://ak-basketball.github.io/blog/day3.html">Day 3: Animation</a></li>
+              <li><a href="http://ak-basketball.github.io/blog/day4.html">Day 4: Solar-system</a></li>
             </ul>
         </div>
 <!--==============================--> 
