--- a/mainPage.html
+++ b/mainPage.html
@@ -84,7 +84,7 @@
                   <br>
                   <a href="http://ak-basketball.github.io/projects/day4.html">Day 4: Solar-System</a>
                   <br>
-                  <a href="http://ak-basketball.github.io/projects/day5.html">Day 5: BUBBLES</a>
+                  <a href="http://ak-basketball.github.io/projects/day5.html">Day 5: Calculator</a>
           </div>
       
       </content>
