--- a/blogPage.html
+++ b/blogPage.html
@@ -59,7 +59,7 @@
               <li><a href="http://ak-basketball.github.io/blog/day2.html">Day 2: Control</a></li>
               <li><a href="http://ak-basketball.github.io/blog/day3.html">Day 3: Animation</a></li>
               <li><a href="http://ak-basketball.github.io/blog/day4.html">Day 4: Solar-system</a></li>
-              <li><a href="http://ak-basketball.github.io/blog/day5.html">Day 5: BUBBLES</a></li>
+              <li><a href="http://ak-basketball.github.io/blog/day5.html">Day 5: Calculator</a></li>
             </ul>
         </div>
 <!--==============================--> 
