--- a/mainPage.html
+++ b/mainPage.html
@@ -85,6 +85,8 @@
                   <a href="http://ak-basketball.github.io/projects/day4.html">Day 4: Solar-System</a>
                   <br>
                   <a href="http://ak-basketball.github.io/projects/day5.html">Day 5: Calculator</a>
+                  <br>
+                  <a href="http://ak-basketball.github.io/projects/day6.html">Day 6: Solar-system 2.0</a>
           </div>
       
       </content>
